<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ProductActivity">
    <ImageView
        android:id="@+id/imageid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/lunch"
        android:src="@drawable/barger"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageid"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            style="@style/textStyle"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/title_food"/>

        <TextView
            android:id="@+id/cost"
            style="@style/textStyle"
            android:textSize="15sp"
            android:text="@string/cost_food"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/availability"
            style="@style/textStyle"
            android:textSize="15sp"
            android:text="@string/availability_food"/>
    </LinearLayout>

</RelativeLayout>