<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="260dp"
    android:layout_margin="8dp"
    android:id="@+id/cardview">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageid"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/lunch"/>
        <LinearLayout
            android:layout_below="@+id/imageid"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                style="@style/textStyle"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/title_food"/>

            <TextView
                android:id="@+id/cost"
                style="@style/textStyle"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/availability"
                style="@style/textStyle"
                android:textSize="15sp"
                android:text="@string/availability_food"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>